--- a/front/main.css
+++ b/front/main.css
@@ -1,21 +1,87 @@
+*{
+    margin: 0;
+}
+
 body{
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2rem;
 }
 
 .head{
-    background-image: url(https://images.wallpapersden.com/image/download/sunset-painting-artwork_a2hoZmqUmZqaraWkpJRnZWltrWZmamc.jpg);
+    background-image: url(https://external-preview.redd.it/76wdZ95fkiToTrjkKSCP4rySR5b9Gcz4a5i-eKBzM8c.jpg?auto=webp&s=3e1a734053ba0d5810106f51077174be9e2efa66);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+h1{
+    color:rgb(215, 215, 215);
+}
+
+.main{
+    /* margin-top: 5%; */
 }
 
 header{
-    margin-top: 5%;
+    height: 450px;
     align-items: center;
     text-align: center; 
 }
 
+.text{
+    margin-top: 10%;
+    text-align: center;
+    align-items: center;
+}
+
+.input{
+    font-size: 1rem;
+    width: 45%;
+    height: 40%;
+    border: 4px solid #f346ff;
+    resize: none;
+}
+
 button{
-    padding: 10px 15px;
-    font-size: 20px;
-    background-color: white;
-    color: black;
-    border: 4px solid #f346ff; 
+  align-items: center;
+  appearance: none;
+  background-color: rgb(215, 215, 215);
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+button:focus {
+  box-shadow: rgb(215, 215, 215) 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+button:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+button:active {
+  box-shadow: rgb(215, 215, 215) 0 3px 7px inset;
+  transform: translateY(2px);
 }
