--- a/front/main.css
+++ b/front/main.css
@@ -18,11 +18,11 @@ h1{
 }
 
 .main{
-    /* margin-top: 5%; */
+    margin-top: 5%;
 }
 
 header{
-    height: 450px;
+    height: 400px;
     align-items: center;
     text-align: center; 
 }
