--- a/front/main.css
+++ b/front/main.css
@@ -17,10 +17,6 @@ h1{
     color:rgb(215, 215, 215);
 }
 
-.main{
-    margin-top: 5%;
-}
-
 header{
     height: 400px;
     align-items: center;
@@ -38,6 +34,8 @@ header{
     width: 45%;
     height: 40%;
     border: 4px solid #f346ff;
+    border-radius: 23px;
+    padding: 1%;
     resize: none;
 }
 
