--- a/front/main.css
+++ b/front/main.css
@@ -23,8 +23,8 @@ header{
     text-align: center; 
 }
 
-.text{
-    margin-top: 10%;
+.textin{
+    margin-top: 3%;
     text-align: center;
     align-items: center;
 }
@@ -39,6 +39,15 @@ header{
     resize: none;
 }
 
+.output{
+  font-size: 1rem;
+  width: 45%;
+  height: 40%;
+  border: 4px solid #f346ff;
+  border-radius: 23px;
+  padding: 1%;
+  resize: none;
+}
 button{
   align-items: center;
   appearance: none;
