--- a/front/main.css
+++ b/front/main.css
@@ -14,11 +14,12 @@ body{
     width: 100%;
 }
 h1{
-    color:rgb(215, 215, 215);
+    color:rgb(255, 255, 255);
 }
 
 header{
-    height: 400px;
+    width: 100%;
+    height: 300px;
     align-items: center;
     text-align: center; 
 }
@@ -30,28 +31,39 @@ header{
 }
 
 .input{
+    /* font-size: 1rem; */
+    width: 45%;
+    margin-left: 27%;
+    background: linear-gradient(to right, rgb(0, 255, 225), rgb(255, 0, 242));
+    border-radius: 25px;
+    padding: 0.2% 0.2%;
+}
+
+.in{
+  margin-top: 1%;
+  font-size: 1rem;
+  width: 97%;
+  border-radius: 23px;
+  resize: none;
+  padding: 1% 1%;
+  overflow:  hidden;
+}
+
+.output{
+    margin-left: 27%;
     font-size: 1rem;
     width: 45%;
     height: 40%;
-    border: 4px solid #f346ff;
+    background: linear-gradient(to right, rgb(0, 255, 225), rgb(255, 0, 242));
     border-radius: 23px;
     padding: 1%;
     resize: none;
 }
 
-.output{
-  font-size: 1rem;
-  width: 45%;
-  height: 40%;
-  border: 4px solid #f346ff;
-  border-radius: 23px;
-  padding: 1%;
-  resize: none;
-}
 button{
   align-items: center;
   appearance: none;
-  background-color: rgb(215, 215, 215);
+  background-color: rgb(255, 255, 255);
   border-radius: 4px;
   border-width: 0;
   box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -79,16 +91,20 @@ button{
   font-size: 18px;
 }
 
-button:focus {
-  box-shadow: rgb(215, 215, 215) 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
 button:hover {
   box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
   transform: translateY(-2px);
 }
 
 button:active {
-  box-shadow: rgb(215, 215, 215) 0 3px 7px inset;
+  box-shadow: rgb(213, 105, 255) 0 3px 7px inset;
   transform: translateY(2px);
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
 }
