--- a/front/imgstyle.css
+++ b/front/imgstyle.css
@@ -37,7 +37,7 @@
   
   .image-upload-wrap {
     margin-top: 20px;
-    border: 4px dashed #7a32ffdb;
+    border: 4px dashed rgb(255, 121, 248);
     position: relative;
   }
   
