--- a/front/css/snackbar.css
+++ b/front/css/snackbar.css
@@ -1,9 +1,8 @@
-/*Snackbar style*/
 #snackbar{
    position:absolute;
    left:15px;
    bottom:15px;
-   background:rgba(0,0,0,0.8);
+   background:rgba(30, 30, 30, 0.8);
    color:#fff;
    padding:15px;
    border-radius:0px 3px 3px 0px;
@@ -15,7 +14,6 @@
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow:hidden;
-   /*font-weight:bold;*/
    contain:layout;
  }
 #snackbarImg{
