--- a/front/main.css
+++ b/front/main.css
@@ -4,7 +4,7 @@
 
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2rem;
+    /* font-size: 2rem; */
 }
 
 .head{
@@ -14,6 +14,7 @@ body{
     width: 100%;
 }
 h1{
+    font-size: 5rem;
     color:rgb(255, 255, 255);
 }
 
