--- a/front/main.css
+++ b/front/main.css
@@ -111,3 +111,11 @@ footer{
   margin-left: 28%;
   text-align: start;
 }
+
+.imgin{
+  text-align: center;
+  opacity: 0;
+  position: absolute;
+  bottom: 33%;
+  left: 50%;
+}
