--- a/front/main.css
+++ b/front/main.css
@@ -20,7 +20,7 @@ h1{
 
 header{
     width: 100%;
-    height: 300px;
+    height: max-content;
     align-items: center;
     text-align: center; 
 }
@@ -100,6 +100,7 @@ button:active {
 }
 
 footer{
+  height: min-content;
   position: fixed;
   bottom: 0;
   left: 0;
